--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -1,18 +1,30 @@
 :root {
-    --light-hl-0: #A31515;
-    --dark-hl-0: #CE9178;
-    --light-hl-1: #001080;
-    --dark-hl-1: #9CDCFE;
-    --light-hl-2: #000000;
-    --dark-hl-2: #D4D4D4;
+    --light-hl-0: #0070C1;
+    --dark-hl-0: #4FC1FF;
+    --light-hl-1: #000000;
+    --dark-hl-1: #D4D4D4;
+    --light-hl-2: #267F99;
+    --dark-hl-2: #4EC9B0;
     --light-hl-3: #795E26;
     --dark-hl-3: #DCDCAA;
-    --light-hl-4: #0070C1;
-    --dark-hl-4: #4FC1FF;
-    --light-hl-5: #CD3131;
-    --dark-hl-5: #F44747;
-    --light-hl-6: #0000FF;
-    --dark-hl-6: #569CD6;
+    --light-hl-4: #A31515;
+    --dark-hl-4: #CE9178;
+    --light-hl-5: #AF00DB;
+    --dark-hl-5: #C586C0;
+    --light-hl-6: #001080;
+    --dark-hl-6: #9CDCFE;
+    --light-hl-7: #0000FF;
+    --dark-hl-7: #569CD6;
+    --light-hl-8: #800000;
+    --dark-hl-8: #808080;
+    --light-hl-9: #E50000;
+    --dark-hl-9: #9CDCFE;
+    --light-hl-10: #000000FF;
+    --dark-hl-10: #D4D4D4;
+    --light-hl-11: #098658;
+    --dark-hl-11: #B5CEA8;
+    --light-hl-12: #CD3131;
+    --dark-hl-12: #F44747;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -25,6 +37,12 @@
     --hl-4: var(--light-hl-4);
     --hl-5: var(--light-hl-5);
     --hl-6: var(--light-hl-6);
+    --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
     --code-background: var(--light-code-background);
 } }
 
@@ -36,6 +54,12 @@
     --hl-4: var(--dark-hl-4);
     --hl-5: var(--dark-hl-5);
     --hl-6: var(--dark-hl-6);
+    --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
     --code-background: var(--dark-code-background);
 } }
 
@@ -47,6 +71,12 @@
     --hl-4: var(--light-hl-4);
     --hl-5: var(--light-hl-5);
     --hl-6: var(--light-hl-6);
+    --hl-7: var(--light-hl-7);
+    --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
     --code-background: var(--light-code-background);
 }
 
@@ -58,6 +88,12 @@
     --hl-4: var(--dark-hl-4);
     --hl-5: var(--dark-hl-5);
     --hl-6: var(--dark-hl-6);
+    --hl-7: var(--dark-hl-7);
+    --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
     --code-background: var(--dark-code-background);
 }
 
@@ -68,4 +104,10 @@
 .hl-4 { color: var(--hl-4); }
 .hl-5 { color: var(--hl-5); }
 .hl-6 { color: var(--hl-6); }
+.hl-7 { color: var(--hl-7); }
+.hl-8 { color: var(--hl-8); }
+.hl-9 { color: var(--hl-9); }
+.hl-10 { color: var(--hl-10); }
+.hl-11 { color: var(--hl-11); }
+.hl-12 { color: var(--hl-12); }
 pre, code { background: var(--code-background); }
